# parqcast-server

./: .gitignore  README.md  config.toml  pyproject.toml
src/parqcast/server/: __init__.py  app.py
